// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check AWS Auth should render form in edit for the aws Iam 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="hashiCorpVault"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.hashicorpVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.hashiCorpVault.setupEngine
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--padding-bottom-xlarge"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="vaultUrl-0"
              >
                <label
                  class="bp3-label"
                  for="vaultUrl"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_vaultUrl"
                  >
                    connectors.hashiCorpVault.vaultUrl
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="vaultUrl"
                      type="text"
                      value="https://vaultqa.harness.io"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="basePath-1"
              >
                <label
                  class="bp3-label"
                  for="basePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_basePath"
                  >
                    connectors.hashiCorpVault.baseSecretPath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="basePath"
                      type="text"
                      value="/harness"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="namespace-2"
              >
                <label
                  class="bp3-label"
                  for="namespace"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_namespace"
                  >
                    common.namespace
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="namespace"
                      placeholder="connectors.hashiCorpVault.root"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="accessType-3"
              >
                <label
                  class="bp3-label"
                  for="accessType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_accessType"
                  >
                    authentication
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="accessType"
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="connectors.hashiCorpVault.awsAuth"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="bp3-overlay bp3-overlay-inline"
                    >
                      <div
                        class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                        style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
                      >
                        <div
                          class="bp3-popover bp3-minimal bp3-select-popover"
                          style="transform-origin: center top;"
                        >
                          <div
                            class="bp3-popover-content"
                          >
                            <div>
                              <ul
                                class="bp3-menu"
                              >
                                <li
                                  class="Select--menuItem Select--active"
                                >
                                  <p
                                    class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                    style="--text-line-clamp: 1;"
                                  >
                                    connectors.hashiCorpVault.appRole
                                  </p>
                                </li>
                                <li
                                  class="Select--menuItem"
                                >
                                  <p
                                    class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                    style="--text-line-clamp: 1;"
                                  >
                                    token
                                  </p>
                                </li>
                                <li
                                  class="Select--menuItem"
                                >
                                  <p
                                    class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                    style="--text-line-clamp: 1;"
                                  >
                                    connectors.hashiCorpVault.vaultAgent
                                  </p>
                                </li>
                                <li
                                  class="Select--menuItem"
                                >
                                  <p
                                    class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                    style="--text-line-clamp: 1;"
                                  >
                                    connectors.hashiCorpVault.awsAuth
                                  </p>
                                </li>
                                <li
                                  class="Select--menuItem"
                                >
                                  <p
                                    class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                    style="--text-line-clamp: 1;"
                                  >
                                    connectors.hashiCorpVault.k8s_auth
                                  </p>
                                </li>
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="vaultConfigForm_xvaultAwsIamServerId"
                      >
                        connectors.hashiCorpVault.serverIdHeader
                      </span>
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="xvaultAwsIamServerId"
                        href="/account/dummy/settings/resources/connectors"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            secrets.secret.configureSecret
                          </div>
                          <div>
                            &lt;selected_secret&gt;
                          </div>
                        </p>
                      </a>
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main containerEditBtn Button--with-current-color Button--without-shadow"
                        data-testid="xvaultAwsIamServerId-edit"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--color StyledProps--color-primary7"
                            icon="edit"
                          >
                            <svg
                              data-icon="edit"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                edit
                              </desc>
                              <path
                                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="vaultAwsIamRole"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_vaultAwsIamRole"
                  >
                    common.role
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="vaultAwsIamRole"
                      type="text"
                      value="test role"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="awsRegion"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_awsRegion"
                  >
                    regionLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="awsRegion"
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="region1"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="bp3-overlay bp3-overlay-inline"
                    >
                      <div
                        class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                      >
                        <div
                          class="bp3-popover bp3-minimal bp3-select-popover"
                        >
                          <div
                            class="bp3-popover-content"
                          >
                            <div>
                              <ul
                                class="bp3-menu"
                              >
                                <li
                                  class="Select--menuItem Select--active"
                                >
                                  <p
                                    class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                    style="--text-line-clamp: 1;"
                                  >
                                    region1
                                  </p>
                                </li>
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="readOnly-7"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="readOnly"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_readOnly"
                    >
                      connectors.hashiCorpVault.readOnlyVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="default-8"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="default"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_default"
                    >
                      connectors.hashiCorpVault.defaultVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Check AWS Auth should render form in edit for the aws Iam 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="hashiCorpVault"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.hashicorpVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.hashiCorpVault.setupEngine
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
          id="delegateSelectorStepTitle"
        >
          delegate.DelegateselectionLabel
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main delegateSelectorContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--margin-top-xlarge StyledProps--margin-bottom-medium"
                >
                  connectors.delegate.configure
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                    data-tooltip-id="connectors.delegate.delegateSelectorAny"
                  >
                    <label
                      class="bp3-control bp3-radio radio"
                    >
                      <input
                        checked=""
                        color="grey800"
                        type="radio"
                        value="DelegateOptions.DelegateOptionsAny"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      connectors.delegate.delegateSelectorAny
                    </label>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                    data-tooltip-id="connectors.delegate.delegateSelectorSelective"
                  >
                    <label
                      class="bp3-control bp3-radio radio"
                    >
                      <input
                        color="grey800"
                        type="radio"
                        value="DelegateOptions.DelegateOptionsSelective"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      connectors.delegate.delegateSelectorSelective
                    </label>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--margin-bottom-medium"
                >
                  <div
                    class="wrapper"
                    data-name="DelegateSelectors"
                  >
                    <div
                      class="bp3-popover-wrapper delegateInput delegatePopover bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                placeholder="connectors.delegate.delegateselectionPlaceholder"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--margin-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
                  >
                    connectors.delegate.testDelegateConnectivity
                  </p>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--font StyledProps--font-weight-semi-bold Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-secondary"
                    data-name="installNewDelegateButton"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--margin-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      connectors.testConnectionStep.installNewDelegate
                    </span>
                  </button>
                </div>
                <div
                  class="StyledProps--font StyledProps--main delegateContentContainer StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--padding-top-small StyledProps--background-white"
                  data-name="delegateContentContainer"
                  style="height: 265px;"
                >
                  <div
                    class="Layout--vertical StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
                    data-name="delegateTableEmptyState"
                    style="height: 100%;"
                  >
                    <img
                      height="100%"
                      src="test-file-stub"
                      style="align-self: center;"
                      width="100%"
                    />
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      connectors.delegate.noDelegates
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-small StyledProps--margin-top-xxxlarge"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  data-name="awsBackButton"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main saveAndContinue StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  data-testid="delegateSaveAndContinue"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <p
                  class="StyledProps--font StyledProps--main noDelegateWarning StyledProps--font-size-small StyledProps--font-weight-semi-bold"
                  data-name="delegateNoMatchWarning"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--margin-right-xsmall StyledProps--color StyledProps--color-yellow900"
                    icon="warning-sign"
                  >
                    <svg
                      data-icon="warning-sign"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        warning-sign
                      </desc>
                      <path
                        d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connectors.delegate.noMatchingDelegate
                </p>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
